FIX navigation chevron not to wrap

--- a/src/elements/markdownnav.css
+++ b/src/elements/markdownnav.css
@@ -91,15 +91,16 @@ nav.vertical ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  /*background-color: white;*/
   height: 100%;
+  white-space: nowrap;
 }
 
 nav.vertical li a {
-  display: inline-block;
+  display: unset;
   color: black;/*#000;*/
-  padding: 0px 16px;
+  padding: 0px 8px 0px 16px;
   text-decoration: none;
+  white-space: normal;
 }
 
 nav.vertical li a.active {
